fixed top padding of entire section to close gap

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -6,7 +6,7 @@
 }
 
 #about {
-    padding: 8rem 0 20rem 0;
+    padding: 6rem 0 20rem 0;
 }
 
 #about > h2 {
