--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -1,5 +1,5 @@
 #portfolio {
-    padding: 2rem 0 4rem 0;
+    padding: 6rem 0 4rem 0;
 }
 
 #portfolio > h2 {
